Fix overlapping classes

--- a/app/assets/stylesheets/components/main_page.scss
+++ b/app/assets/stylesheets/components/main_page.scss
@@ -77,7 +77,7 @@
   align-items: center;
 }
 
-.fa {
+.fa-intro {
   margin-top: 30px;
   margin-bottom: 30px;
 
