--- a/app/assets/stylesheets/components/trainer_list.scss
+++ b/app/assets/stylesheets/components/trainer_list.scss
@@ -100,7 +100,6 @@
 .trainer-list-type {
   width: 35%;
   padding-left: 10px;
-  display: flex;
 }
 
 .display-type {
